--- a/src/app/regra-de-3/Regra.module.css
+++ b/src/app/regra-de-3/Regra.module.css
@@ -7,6 +7,11 @@
     min-height: 100vh;
 }
 
+.regraTitulo{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
 .formulario{
     display: flex;
     flex-direction: column;
@@ -32,6 +37,12 @@
     text-align: center;
 }
 
+.formRegra input[type='submit']{
+    background-color: #0097e6;
+    color: #ffffff;
+    filter: drop-shadow(1px 1px 5px #00a8ff);
+}
+
 .regraTitulo{
     display: flex;
     justify-content: center;
@@ -39,7 +50,7 @@
 }
 
 .estaPara{
-    background-color: #e84118;
+    background-color: #40739e;
     color: #ffffff;
     font-weight: 700;
     overflow: visible;
@@ -72,7 +83,10 @@
 }
 
 .btnReset{
-    background: transparent;
+    background-color: #0097e6;
+    padding: 5px;
+    border-radius: 50%;
+    filter: drop-shadow(1px 1px 5px #00a8ff);
 }
 
 .btnReset:focus{
