--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 45, 52, 54;
+    --background-end-rgb: 52, 73, 94;
   }
 }
 
@@ -27,3 +27,9 @@ body {
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
 }
+
+/* 
+  Cores Dark Mode
+  rgb(45, 52, 54)
+  rgb(52, 73, 94) 
+*/
