--- a/src/app/regra-de-3/Regra.module.css
+++ b/src/app/regra-de-3/Regra.module.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     gap: 25px;
     min-height: 100vh;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .regraTitulo{
@@ -103,6 +105,7 @@
     max-width: 1440px;
     width: 100%;
     gap: 25px;
+    padding-top: 20px;
     padding-left: 15px;
     padding-right: 15px;
     min-height: 100vh;
