--- a/src/app/pdf-tools/Pdf.module.css
+++ b/src/app/pdf-tools/Pdf.module.css
@@ -2,6 +2,8 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    /* padding-bottom: 100px; */
 }
 
 .container{
@@ -23,11 +25,12 @@
     justify-content: center;
     align-items: center;
     padding-top: 50px;
-    max-width: 800px;
+    max-width: 500px;
     margin: auto;
-    text-align: justify;
+    text-align: center;
     padding-left: 20px;
     padding-right: 20px;
+    gap: 20px;
 }
 
 
