--- a/src/app/pdf-tools/Pdf.module.css
+++ b/src/app/pdf-tools/Pdf.module.css
@@ -1,10 +1,13 @@
-.pdfToolsContent{
-    min-height: 100vh;
+.pdfToolsContent, .pdfTxtContent{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* padding-bottom: 100px; */
+    align-items: center;
+    height: 100vh;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
+
 
 .container{
     display: flex;
@@ -24,13 +27,28 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
     max-width: 500px;
-    margin: auto;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
     gap: 20px;
 }
 
+.arquivo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 215px;
+}
 
+
+.ptxt{
+    text-align: justify;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
